--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,20 @@ body {
   text-align: center;
   font-family: Helvetica, sans-serif;
 }
+
+header,
+footer,
+.middle {
+  background-image: url("../images/the-flatiron-building.png");
+}
+
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
+
+header nav a {
+  font-size: 18px;
+  color: white;
+}
